@@ -1,3 +1,9 @@
+2010-11-18  Phil Muldoon  <pmuldoon@redhat.com>
+
+    	PR mi/11407
+    	* mi/mi-cmd-stack.c (list_args_or_locals): Catch exceptions from
+    	read_var_value and common_val_print and print a warning.
+
 2010-11-12  Marc Khouzam  <marc.khouzam@ericsson.com>
 
 	* mi/mi-main.c (mi_cmd_target_detach): Accept new
